Update java17 and deleting cassandra implementation (#137 #138 #141)
* deleting cassandra implementation

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* Update java17 and dependencies (including Powsybl-core 6.1.0) (#138)

* update springboot to v2.7.18

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* update jackson to 2.15.2

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* update guava to 32.1.2-jre

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* update autoservice to 1.1.1

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* update assertj to 3.24.2

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* update jimfs to 1.3.0

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* update maven core to 3.8.5

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* update slf4j to 2.0.9

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* update groovy to 4.0.14

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* update arquillianbom to 1.5.0.Final

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* upgrade junit to 5.10.0

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* test arquillian, resteasy and wildfly update

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* javaee to jakarta update

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* javaee to jakarta update continued

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* javaee to jakarta update continued

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* some dependencies update

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* shrinkwrap + beans.xml + arquillian.xml update

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* shrinkwrap + beans.xml + arquillian.xml update

Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>

* powsybl-parent update to v15

Signed-off-by: Nicolas Ro